--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,4 +16,20 @@ spec:
       - name: devops-webapp
         image: devops-webapp:latest 
         ports:
-        - containerPort: 8080 
+        - containerPort: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: docker-web-app-service
+spec:
+  selector:
+    app: docker_web_app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: ClusterIP
+        
